app/assets/stylesheets/style.css.scss
/* Use SASS (http://sass-lang.com/) here */
/***********VARIABLES************/
$blue: #33B5E5;
$red: #FF4444;
$green: #99CC00;
$purple: #AA66CC;
$orange: #FFBB33;
$light-grey: #eeeeee;
$dark-grey: #aaa;
$grey: #c5c5c5;
$dark-red: #CC0000;
$dark-blue: #0099CC;
$dark-orange: #FF8800;
$dark-green: #669900;
$dark-purple: #9933CC;

/* TODO use constants for positions too

 are these sass doing? Pretty neat...*/

/***********MIXINS************/

/* sets the radius for all vendor-prefixes (and unprefixed) */
@mixin border-radius($rad) {
  -webkit-border-radius: $rad;
  -moz-border-radius: $rad;
  border-radius: $rad;
}

/* sets the border of the nodes */
@mixin node-border($color) {
  @include border-radius(7px);
  border: 2px solid $color;
}

/* all clickable elements */
@mixin clickable {
  &:hover {
    cursor: pointer;
    background-color: $grey;
  }
}

@mixin opacity($ammount){
  opacity: $ammount;
  filter: alpha(opacity = $ammount*100);
}

/***********General************/

#mindmap {
  position: absolute;
  top: 51px;

  svg {
    z-index: 3;
  }
  .rvml {
    z-index: 3;
  }
}

body {
  padding: 0;
  font-family: Verdana, sans-serif;
  font-size: 12px;
}

ul{
  padding-left: 10px;
}

input[type=text] {
  @include border-radius(5px);
  border: 1px solid $grey;
  padding: {
    left: 2px;
    top: 2px;
    bottom: 2px;
  }
  margin: {
    left: 5px;
    right: 5px;
  }
}

input[type=button] {
  background-color: $light-grey;
  border-radius: 5px;
  padding-left: 15px !important;
  padding-right: 15px !important;
  margin: {
    left: 5px;
    right: 5px;
  }
  height: 32px;
  border: 1px solid $light-grey;
  @include clickable;

  &:hover {
    background-color: $dark-grey;
  }
}

.right {
  float: right;
}

.messagebox {
  margin: 1px;
  width: 240px;

  div.messagebox-buttons {
    text-align: right;
    margin-top: 10px;
  }
}

/* all clickable elements */
.clickable {
  @include clickable;
}

.hidden {
  display: none;
}

/***********Side panel************/

#panels-container {
  max-width: 250px;
  position: absolute;
  top: 50px;
  right: 0;
  width: 200px;
  z-index: 10;
  display: none;

  .title {
    background: $light-grey;
    border-bottom: 1px solid $grey;
    @include border-radius(7px);
    margin: 0 -10px 0 -10px;
    margin-bottom: 0;
    font-size: 16px;
    height: 25px;
    text-align: center;
    padding: 5px;

    p {
      margin: 0;
    }
  }

  /* the bow with the legend and the admin panel*/
  #panels {
    width: 100%;
    display: block;
    float: right;
    overflow: hidden;

    .panel {
      margin: 10px;
      margin-left: 0;
      background: white;
      border: 1px solid $grey;
      @include border-radius(7px);
      padding: 0 10px 0 10px;
      position: relative;
    }

    /* the admin panel */
    #admin {
      font-size: 0.8em;

      p {
        margin-bottom: 3px;
      }

      .provider {
        font-size: 1.25em;
      }

      .admin-slider {
        margin-top: 3px;
      }

      input[type=button] {
        margin: 5px;
      }
    }

    /* the legend */
    #legend {

      /* the items of the legend */
      .legend {
        margin: 10px;
        padding-left: 10px;
        text-align: center;
        position: relative;
      }
    }
  }
}

#hide-panels {
  display: inline-table;
  position: absolute;
  top: 80px;
  right: 0px;
  background: $light-grey;
  width: 30px;
  height: 30px;
  z-index: 8;
  text-align: center;
  @include border-radius(5px);
  -webkit-border-top-right-radius: 0px;
  -webkit-border-bottom-right-radius: 0px;
  -moz-border-radius-topright: 0px;
  -moz-border-radius-bottomright: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  border: 1px $grey solid;
  vertical-align: middle;
  border-right: none;
}

/***********Top bar************/

#search-bar {
  position: fixed;
  overflow: hidden; /* allow contained divs to be side by side */
  width: 100%;
  height: 50px;
  background: $light-grey;
  border-bottom: 1px solid $grey;
  /* box-shadow: 0px 3px 8px #666; /* looks pretty neat... */
  top: 0;
  left: 0;
  z-index: 11;

  #code-name {
    width: 200px;
    height: 28px;
    margin-top: 10px;
    margin-left: 15px;
    padding-left: 15px;
    float: left;
  }

  #search-button {
    margin-left: 16px;
    margin-top: 16px;
    padding-top: 3px;
    float: left;
    @include clickable;
  }

  /* TODO rename, this is only used for the language selection */
  .hide-arrow {
    border: 1px solid $grey;
    width: 100px;
    padding-top: 3px;
    overflow: hidden;
    border-radius: 7px;
    float: right;
    background: url(arrow.png) no-repeat right white;
    height: 29px !important;
    margin-left: 16px;
    margin-top: 10px;
    margin-right: 16px;

    &.svg {
      background: url(arrow.svg) no-repeat right white !important;
      background-size: 30px 15px !important; /* you need to make your svg bigger than 1 px = 1 px to trick the browser into not prerendering it...*/
    }
  }

  /* TODO Share code with above */
  .mode-arrow {
    border: 1px solid $grey;
    width: 110px;
    padding-top: 3px;
    border-radius: 7px;
    overflow: hidden;
    float: right;
    background: url(arrow.png) no-repeat right white;
    height: 29px !important;
    margin-left: 16px;
    margin-top: 10px;

    &.svg {
      background: url(arrow.svg) no-repeat right white !important;
      background-size: 30px 15px !important;
    }
  }

  /* TODO Share code with above */
  .catalog-arrow {
    border: 1px solid $grey;
    width: 140px;
    overflow: hidden;
    padding-top: 3px;
    border-radius: 7px;
    float: left;
    background: url(arrow.png) no-repeat right white;
    height: 29px !important;
    margin-left: 16px;
    margin-top: 10px;

    &.svg {
      background: url(arrow.svg) no-repeat right white !important;
      background-size: 30px 15px !important;
    }
  }

  #location-container {
    height: 32px;
    min-width: 200px;
    max-width: 400px;
    @include border-radius(5px);
    border: 1px solid $grey;
    background: white;
    line-height: 28px;
    vertical-align: center;
    margin-top: 10px;
    float: left;
    margin-left: 16px;
    overflow: hidden;

    #location-inner {
      padding: 2px;
      padding-left: 5px;
      padding-right: 5px;
      height: 28px;
    }

    p {
      display: inline;
    }

    .globe {
      font-size: 1.5em;
      margin-right: 3px;
    }

    .location {
      max-width: 430px;
      font-size: 0.8em;
    }
  }

  #lang {
    background: transparent;
    width: 125px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    padding: 3px 5px 3px 15px;
    height: 25px;
    -webkit-appearance: none;
  }

  #mode {
    background: transparent;
    width: 135px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    padding: 3px 5px 3px 15px;
    height: 25px;
    -webkit-appearance: none;
  }

  #catalog {
    background: transparent;
    width: 165px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    padding: 3px 5px 3px 15px;
    height: 25px;
    -webkit-appearance: none;
  }

}

/***********Nodes and Containers************/

/* nodes and legend items */
div.node, div.legend {
  background: $light-grey;
  padding-left: 15px;
  padding-right: 5px;
  max-width: 250px;
  word-wrap: break-word;
  position: absolute;
  text-align: center;
  z-index: 7;

  &.syn {
    @include node-border($dark-blue);
    text-align: left;
    overflow-y: scroll;
    max-height: 150px;
  }

  &.field {
    @include node-border($blue);

    .icon-user-md{
      font-size: 28px;
      margin: 0;
      background: transparent;
      float: right;
      line-height: 50px;
      vertical-align: middle;
      margin-left: 5px;
      padding-left: 5px;
    }

    .content{
      float: left;
      max-width: 160px;
    }
  }

  &.drg {
    @include node-border($red);
  }

  &.exclusiva {
    @include node-border($green);
  }

  &.inclusiva {
    @include node-border($orange);
  }

  &.super {
    @include node-border($dark-green);
  }

  &.sub {
    @include node-border($purple);
  }

  &.root {
    background: $light-grey;
    @include node-border($grey);
    @include border-radius(5px);
    font-size: 20px;
    z-index: 10;
    max-width: 300px;
    min-width: 200px;
    min-height: 100px;
    display: table-cell;
    vertical-align: middle;

  }
}

.relatedness-container {
  width: 100px;
  height: 5px;
  border: $dark-blue 1px solid;
  margin: 6px auto 6px auto;
  background: white;
}

.relatedness-display {
  background: $blue;
  height: 100%;
  left: 0;
  float: left;
}

/* containers */
div.container {
  position: absolute;
  z-index: 2;
  @include border-radius(7px);

  //black
  &.syn {
    @include opacity(0.3);
    background: lighten($dark-blue, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //blue
  &.field {
    @include opacity(0.3);
    background: lighten($blue, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //red
  &.drg {
    @include opacity(0.5);
    background: lighten($red, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //orange
  &.inclusiva-exclusiva {
    @include opacity(0.5);
    background: lighten($orange, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //grey
  &.super {
    @include opacity(0.3);
    background: lighten($dark-green, 50%);
    &.active {
      @include opacity(1);
    }
  }

  //purple
  &.sub {
    @include opacity(0.5);
    background: lighten($purple, 30%);
    &.active {
      @include opacity(1);
    }
  }

  &.active {
    .container-inner {
      p {
        display: inline;
          @include opacity(1);
      }
    }
  }

  .container-inner {
    position: relative;
    width: 100%;
    height: 100%;
    p {
      @include opacity(0.5);
      padding: 2px;
      position: absolute;
      margin: 0;
      //bottom-right
      &.syn {
        bottom: 0;
        right: 5px;
      }

      //top-left
      &.field {
        top: 0;
        left: 0;
      }

      //top-middle
      &.drg {
        top: 0;
        left: 0;
      }

      //bottom-middle
      &.inclusiva-exclusiva {
        bottom: 0;
        left: 0;
      }

      //top-right
      &.super {
        top: 0;
        right: 5px;
      }

      //right-middle
      &.sub {
        top: 0;
        right: 5px;
      }

      &.show-type {
        font-size: 20px;
      }

    }

  }

}

.front-container {
  z-index: 4;
  position: absolute;
}

/***********Overlay************/

.docOverlay, #location-popup {
  height: 100%;
  width: 100%;

  .location p {
    position: relative;
    display: inline;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    margin: 0;
  }

  h3 {
    margin-left: 5px;
  }

  #map {
    float: right;
    display: inline;
    width: 60%;
    height: 85%;
  }

  #location-map {
    float: left;
    display: inline;
    width: 700px;
    height: 500px;
  }

  #docList {
    float: left;
    display: inline;
    width: 40%;
    height: 85%;
    overflow: scroll;
    overflow-x: hidden;

    /* the label for the input behind the doc list */
    label {
      display: inline-block;
      background-color: $light-grey;
      padding: 4px 11px;
      width: 100%;
      &:hover {
        background-color: $dark-grey !important;
        color: white !important;
      }
    }

    /* the input element behind the doctor list */
    input[type="radio"] {
      display: none;

      &:checked + label {
        background-color: $grey;
      }

      .active:after {
        content: url(arrow.png);
        position: absolute;
        top: 50%;
        left: 100%;
        margin: 10px;
      }
    }
  }
}

#location-input {
  height: 25px;
}

